--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html>
   <head>
     <title>Zombie Game??</title>
+
+    <style media="screen">
+      canvas {
+        border: 1px solid black;
+      }
+    </style>
+
+    <script src="./js/utils.js"></script>
+    <script src="./js/coord.js"></script>
+    <script src="./js/sprite.js"></script>
+    <script src="./js/coll_box.js"></script>
+    <script src="./js/dynamic_object.js"></script>
+    <script src="./js/game.js"></script>
+    <script src="./js/game_view.js"></script>
   </head>
   <body>
-    Zombie Game lives here.
+    <article class="game-container">
+      <div class="canvases">
+        <canvas id="fg-canvas" width="1024" height="576"></canvas>
+      </div>
+    </article>
+
+    <script>
+      var fgCanvas = document.getElementById("fg-canvas");
+      var fgctx = fgCanvas.getContext('2d');
+      var gameView = new ZG.GameView({ ctx: fgctx });
+      gameView.run();
+    </script>
   </body>
 </html>
