--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
         border: 1px solid black;
       }
     </style>
+    <script src="./js/vendor/keymaster.js"></script>
 
     <script src="./js/utils.js"></script>
     <script src="./js/coord.js"></script>
     <script src="./js/sprite.js"></script>
     <script src="./js/coll_box.js"></script>
     <script src="./js/dynamic_object.js"></script>
+    
+    <script src="./js/player.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/game_view.js"></script>
   </head>
