--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <script src="./js/sprite.js"></script>
     <script src="./js/coll_box.js"></script>
     <script src="./js/dynamic_object.js"></script>
-    
+
     <script src="./js/player.js"></script>
+    <script src="./js/zombie.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/game_view.js"></script>
   </head>
