--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./js/dynamic_object.js"></script>
 
     <script src="./js/player.js"></script>
+    <script src="./js/bullet.js"></script>
     <script src="./js/zombie.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/game_view.js"></script>
