--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./js/player.js"></script>
     <script src="./js/bullet.js"></script>
     <script src="./js/zombie.js"></script>
+    <script src="./js/item.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/game_view.js"></script>
   </head>
