--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="./js/bullet.js"></script>
     <script src="./js/zombie.js"></script>
     <script src="./js/item.js"></script>
+    <script src="./js/wall.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/game_view.js"></script>
   </head>
