--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <script src="./js/zombie.js"></script>
     <script src="./js/item.js"></script>
     <script src="./js/wall.js"></script>
+
+    <script src="./js/level.js"></script>
+    <script src="./js/camera.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/game_view.js"></script>
   </head>
